--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   filter: invert(1);
@@ -25,7 +27,7 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: monospace;
+  font-family: "EB Garamond";
   font-size: 16px;
   line-height: 1.4;
   margin: 0;
