added sidepanel and styled

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,8 @@
 
   {%-seo title=false-%}
   {%-feed_meta-%}
-
+  
+  <script src="https://kit.fontawesome.com/f5cccfe494.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" />
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
 </head>
