--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,43 @@
 layout: default
 ---
 <header>
-  <h1>{{ site.title }}</h1>
-  {%-if site.theme_config.show_description-%}
-    <p>{{ site.description }}</p>
-  {%-endif-%}
+  <h1>Anasayfa</h1>
 </header>
-{{ content }}
+<div class="contentbox__main">
+  <div class="contentbox-container">
+    <article class="contentbox-cc">
+      <div class="artbox">
+        <i class="fa-solid fa-dragon fa-2xl" style="color: #ff626b;"></i>
+        <h1>Tarih</h1>
+      </div>
+      <p>Bu fantastik diyarın geniş dokumasında; unutulmuş çağların yankıları, zamansız efsanelerin fısıltılarıyla iç içe geçen sihir, çatışma ve sakinlerinin yenilmez ruhunun dokunduğu bir tarih ortaya çıkar. Kozmosu şekillendiren ilkel güçlerden tutun da büyük medeniyetlerin yükselişine ve çöküşüne kadar bütün bu ansiklopedi eski çağların derinliklerine inerek hayret verici dünyanın özünü şekillendiren zaferleri ve trajedileri gün yüzüne çıkarır.</p>
+    </article>
+  </div>
+  <div class="contentbox-container">
+    <article class="contentbox-cc">
+      <div class="artbox">
+        <i class="fa-solid fa-scroll fa-2xl" style="color: rgb(249,226,175);"></i>
+        <h1>Kültür ve Toplum</h1>
+      </div>
+      <p>Bu fantastik diyarın topraklarını süsleyen kültür ve toplum, kendisini oluşturan çeşitli ve karmaşık ipliklerin bir yansımasıdır. Muazzam mimariyle süslenmiş capcanlı şehirlerden, yeşil manzaralar arasına yerleşmiş sakin köylere kadar gelenekler ve törenlerin renkli bir mozaği, paylaşılan deneyimlerin ve benzersiz kimliklerin zengin bir dokusunu oluşturur. Sanat, müzik, mutfak ve ritüellerin bir mozaiğiyle bu dünyanın sakinleri yaratıcılıklarını ifade eder, anlamlı bağlar kurar ve atalarının mirasını onurlandırır. Birliğin ve çeşitliliğin harmonik bir karışımıyla rezonansa gelen canlı bir dokuma oluştururlar.</p>
+    </article>
+  </div>
+  <div class="contentbox-container">
+    <article class="contentbox-cc">
+      <div class="artbox">
+        <i class="fa-solid fa-hat-wizard fa-2xl" style="color: #c4a7e7;"></i>
+        <h1>Büyü</h1>
+      </div>
+      <p>Bu mistik diyarın etheral alemlerinde büyü ve enerjinin güçlü kuvvetleri arasındaki hassas denge hayranlık uyandıran   büyükumaşını örer. Burada, arkan enerjiler varoluşun kendisinden geçerken ölümlülerin doğaüstü güçlere sahip olmalarını ve bilinmezliğin engin kaynaklarına ulaşmalarını sağlar. Kutsal mabetlerde fısıldanan antik büyüler, doğal elementlerin saf kuvveti, büyünün sınırsız potansiyeli ile enerjinin sürekli değişen akımları iç içe geçer. bu olağanüstü dünyanın temellerini oluştururken bireylerin kaderini de şekillendirir.</p>
+    </article>
+  </div>
+  <div class="contentbox-container">
+    <article class="contentbox-cc">
+      <div class="artbox">
+        <i class="fa-solid fa-eye fa-2xl" style="color: #38c68d;"></i>
+        <h1>İnanç</h1>
+      </div>
+      <p>Bu fantastik diyarın ruhani manzarasını süsleyen inançlar doğal güçlerin kudretiyle iç içe geçerek ölümlüler ve etheral alemler arasında derin bir bağ kurar. Burada tanrılar, tanrıçalar ve panteonlar doğal güçleri temsil ederek, elementler üzerinde ilahi otoritelerini kullanarak hüküm sürerken; onlara bağlı takipçiler kutsal ritüeller ile eski geleneklerde huzur ve rehberlik arar. Dünyanın yaratılışını anlatan eski mitlerden, yerin ham enerjisini yönlendiren kehanetlere kadar, bu dünyanın dini dokuması hem görünen hem de görünmez alemlerin içine sinmiş hayranlık uyandıran harikalara tanıklık eder.</p>
+    </article>
+  </div>
+</div>
