--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,35 @@
       <nav class="side-panel">
         <!-- Side panel content goes here -->
         <ul class="main-cats">
-          <h2>Orbis Natura</h2>
-          <li><a href="">Tarih</a></li>
-          <li><a href="">Kültür, dil ve toplum</a></li>
-          <li><a href="">Etnik gruplar</a></li>
-          <li><a href="">İnanç</a></li>
-          <li><a href="">Büyü</a></li>
+          <h1>Orbis Natura</h1>
+
+          <a href="{{ site.baseurl }}wiki/tarih.html">
+            <li class="side-button">
+              <i class="fa-solid fa-dragon fa-lg" style="color: #ff626b;"></i>
+              <p>Tarih</p>
+            </li>
+          </a>
+
+          <a href="{{ site.baseurl }}wiki/kultur-ve-toplum.html">
+            <li class="side-button">
+              <i class="fa-solid fa-scroll fa-lg" style="color: rgb(249,226,175);"></i>
+              <p>Kültür ve toplum</p>
+            </li>
+          </a>
+
+          <a href="{{ site.baseurl }}wiki/buyu.html">
+            <li class="side-button">
+              <i class="fa-solid fa-hat-wizard fa-lg" style="color: #c4a7e7;"></i>
+              <p>Büyü</p>
+            </li>
+          </a>
+
+          <a href="{{ site.baseurl }}wiki/inanc.html">
+            <li class="side-button">
+              <i class="fa-solid fa-eye fa-lg" style="color: #38c68d;"></i>
+              <p>İnanç</p>
+            </li>
+          </a>
         </ul>
         <div class="scaff-container">
           <h3 class="scaff-button">Tüm Girdiler</h3>
