--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -82,8 +82,8 @@ body {
 
 h1 {
   font-family: $headerfont;
-  color: $violet;
-  border-bottom: 1px solid rgba($text, .32);
+  color: $text;
+  border-bottom: 1px solid rgba($text, .45);
   text-align: center;
   text-transform: uppercase;
 }
@@ -91,12 +91,12 @@ h1 {
 h2, h3, h4, h5, h6 {
   margin-top: 3rem;
   font-family: $headerfont;
-  color: $violet;
+  color: $text;
   line-height: 1;
 }
 
 h4 {
-  border-bottom: 1px solid $overlay0;
+  border-bottom: 1px solid $text;
   line-height: 2;
   text-align: end;
 }
@@ -121,8 +121,8 @@ hr {
   text-align: center;
   border: 0;
 
-  &:before { content: '/////' }
-  &:after { content: attr(data-content) '/////' }
+  &:before { content: '***' }
+  &:after { content: attr(data-content) '***' }
 }
 
 table { width: 100%; }
@@ -146,11 +146,12 @@ div.highlighter-rouge code {
 }
 
 blockquote {
-  font-style: italic;
-  border: thin solid black;
-  padding: 1rem;
-
-  p { margin: 0; }
+  float:left;
+  font-size: 10px;
+  background-color: $side;
+  padding: 2rem;
+  margin: 1.785rem;
+  width: max-content;
 }
 
 img {
@@ -272,7 +273,20 @@ img {
 .contentbox__main {
   display: flex;
   flex-wrap: wrap;
+  #green-p {
+    color: rgba($green, .675);
+  }
+  #red-p {
+    color: rgba($red, .675);
+  }
+  #yellow-p {
+    color: rgba($yellow, .675);
+  }
+  #violet-p {
+    color: rgba($violet, .675);
+  }
   a {
+    font-weight: 500;
     color: $text;
   }
   .contentbox-container {
@@ -322,16 +336,16 @@ img {
       font-size: 2.375rem;
     }
     h2 {
-      font-size: 2.075rem;
-    }
-    h3 {
-      font-size: 1.875rem;
-    }
-    h4 {
       font-size: 1.675rem;
     }
+    h3 {
+      font-size: 1.275rem;
+    }
+    h4 {
+      font-size: 1.175rem;
+    }
     h5 {
-      font-size: 1.375rem;
+      font-size: .875rem;
     }
     p {
       margin-bottom: 1em; /* Adjust the value as needed */
@@ -339,6 +353,7 @@ img {
       word-spacing: -1px;
       font-family: "EB Garamond";
       font-size: 20px;
+      text-indent: 4.75%;
     }
   }  
 }
