--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,22 @@
           {{ content }}
         </div>
       </main>
+
+      <!-- Side ToC popup -->
+      <div class="caret-cont" onclick="toggleTocContainer()">
+        <i class="fa-solid fa-caret-right fa-lg" style="color: rgb(198, 208, 245);"></i>
+      </div>
+      <nav class="toc-panel__container">
+        <div class="toc-content">
+            <!-- Content goes here -->
+        </div>
+      </nav>
+      <script>
+        function toggleTocContainer() {
+            var tocContainer = document.querySelector('.toc-panel__container');
+            tocContainer.classList.toggle('collapsed');
+        }
+      </script>
     </div>
 
     <!-- FOOTER HERE -->
