--- a/_sass/no-style-please.scss
+++ b/_sass/no-style-please.scss
@@ -70,6 +70,48 @@ body {
   flex-direction: column;
 }
 
+
+// Scrollbar here //
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #C6D0F5 #F6C177;
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+  width: 12px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 6px;
+  background-color: #F6C177;
+  border: 4px solid #1C1C2A;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #F6C177;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #F6C177;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #C6D0F5;
+  border: 4px solid rgb(28,28,42);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #C6D0F5;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #C6D0F5;
+}
+
+
 .holy-grail__main {
   /* Take the remaining height */
   flex-grow: 1;
