DOMContentLoaded for ToC

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             var tocContainer = document.querySelector('.toc-panel__container');
             tocContainer.classList.toggle('collapsed');
         }
+        document.addEventListener('DOMContentLoaded', toggleTocContainer);
       </script>
     </div>
 
